bicep/aks-agfc/tls-offload/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway-02
  namespace: tls-offload
  annotations:
    alb.networking.azure.io/alb-namespace: agfc
    alb.networking.azure.io/alb-name: alb-agfc
spec:
  gatewayClassName: azure-alb-external
  listeners:
  - name: https-listener
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      mode: Terminate
      certificateRefs:
      - kind : Secret
        group: ""
        name: listener-tls-secret
