bicep/aks-agfc/tls-offload/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https-route
  namespace: tls-offload
spec:
  parentRefs:
  - name: gateway-02
  rules:
  - backendRefs:
    - name: echo
      port: 80
